--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,80 @@
-# Node modules
-node_modules/
-**/node_modules/
+# ===============================
+# Python / FastAPI
+# ===============================
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
 
+# Virtual environment
+myenv/
+venv/
+env/
+.venv/
+
+# Python build files
+build/
+dist/
+*.egg-info/
+
+# ===============================
+# Environment variables
+# ===============================
+.env
+.env.*
+*.env
+
+# ===============================
 # Logs
-logs/
+# ===============================
 *.log
+
+# ===============================
+# Database
+# ===============================
+*.db
+*.sqlite3
+
+# ===============================
+# Node / React
+# ===============================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Next.js build
+# React build
+build/
+dist/
+
+# ===============================
+# Next.js (if used later)
+# ===============================
 .next/
 out/
-dist/
-apps/web/.next/
-apps/web/out/
 
-# Electron build
-apps/desktop/build/
-apps/desktop/dist/
-apps/desktop/release/
+# ===============================
+# IDE / Editor
+# ===============================
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Turbo cache
-.turbo/
-
+# ===============================
 # OS files
+# ===============================
 .DS_Store
 Thumbs.db
 
-# Env files
-.env
-.env.local
-.env.*.local
+# ===============================
+# Testing / Coverage
+# ===============================
+.coverage
+htmlcov/
+.pytest_cache/
 
-# TypeScript build
-*.tsbuildinfo
-
-# VSCode
-.vscode/
-
-# Python backend (if used later)
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-
-# Logs and debug from Electron
-debug.log
-npm-debug.log
-
+# ===============================
+# Misc
+# ===============================
+*.bak
